--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --base-href=/AngularPratice8/",
+    "build": "ng build --prod --base-href  https://anamikaRwapte.github.io/AngularPratice8/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -19,7 +19,9 @@
     "@angular/forms": "~8.2.13",
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
+    "@angular/pwa": "^0.803.18",
     "@angular/router": "~8.2.13",
+    "@angular/service-worker": "~8.2.13",
     "angular-cli-ghpages": "^0.6.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
